# PAPY

./: .directory  .gitignore  DS.ipynb  README.md  fable.txt  fib.py  guess.py
#1/: PAPY_C2.ipynb  PAPY_TP2.1_eleves.ipynb  Pratique-TP1.ipynb  TP1_Exercices.ipynb  fabl.txt  guess.py  helloworld.py
#2/: PAPY_C2.ipynb  TP2.2_Exercices.ipynb  TP2_Exercices.ipynb
#3/: PAPY_C3.ipynb
#3.2/: states.txt
#3.2/TP3.2_Exercices/: .directory  states  (+3 more)
#4/: MatCooPure.py  PAPY_C4.ipynb  PAPY_C4_full.ipynb  TP4_eleve.ipynb  testing.ipynb
#4/TP Final/MandelJuliaLib/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
#4/TP Final/MandelJuliaLib/MandelJulia/: __init__.py  fractales.py  functions.py  julia.py  mandelbrot.py  sequence.py
#4/TP Final/MandelJuliaLib/MandelJulia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
#4/TP Final/MandelJuliaLib/docs/: conf.py  modules.rst
#4/TP Final/MandelJuliaLib/docs/_build/doctrees/: MandelJulia.doctree  environment.pickle  index.doctree  modules.doctree
#4/TP Final/MandelJuliaLib/docs/_build/html/: .buildinfo  MandelJulia.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
#4/TP Final/MandelJuliaLib/docs/_build/html/_modules/: index.html
#4/TP Final/MandelJuliaLib/docs/_build/html/_modules/MandelJulia/: julia.html  mandelbrot.html  sequence.html
#4/TP Final/MandelJuliaLib/docs/_build/html/_sources/: MandelJulia.rst.txt  index.rst.txt
#4/TP Final/MandelJuliaLib/tests/: __init__.py  testing.py
DS/: CM2.ipynb  CM3.ipynb  CM4.ipynb  DS.ipynb  DS.py
(+12 files in other folders)
