[project]
name = "MandelJulia"
description = "Mandelbrot and Julia set tools"
version = "0.1.0"
authors = [
    { name1 = "Daniel Macedo Galembeck", name2 = "Nicolas Contreras" }
]
dependencies = [
    "numpy",
    "time",
    "numba",
    "pil",
    "argspace"
]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]