[metadata]
name = MandelJulia
version = attr: MandelJulia.0.1.0
description = Mandelbrot and Julia set visualization
long_description = Mandelbrot and Julia set visualization
keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    time
    pil
    numpy
    numba
    argspace
    setuptools

[options.extras_require]
test =
    pytest

